# mt5700webui-openwrt-server

./: README.md
at-webserver/: Makefile
at-webserver/files/etc/config/: at-webserver
at-webserver/files/etc/init.d/: at-webserver
at-webserver/srcs/: Cargo.toml
at-webserver/srcs/.cargo/: config
at-webserver/srcs/src/: airplane.rs  config.rs  error.rs  main.rs  net_utils.rs  websocket.rs
at-webserver/srcs/src/at/: client.rs  connection.rs  mod.rs
luci-app-at-webserver/: Makefile
luci-app-at-webserver/htdocs/luci-static/resources/view/at-webserver/: config.js
luci-app-at-webserver/root/usr/share/luci/menu.d/: luci-app-at-webserver.json
