[package]
name = "atserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
axum = "0.7"
rust-embed = "8.3"
mime_guess = "2.0"
http = "1.1"
libc = "0.2.178"
chrono-tz = "0.10.4"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-gnu-gcc"
